--- a/nf/nextflow.config
+++ b/nf/nextflow.config
@@ -1,13 +1,12 @@
 // nextflow.config
 //TODO: upate manifest
 // manifest {
-//     name = 'your-github-username/your-pipeline-name'
-//     author = 'Your Name'
-//     homePage = 'https://github.com/your-github-username/your-pipeline-name'
-//     description = 'A short, clear description of what the pipeline does.'
+//     name = 'Luxen13'
+//     author = 'Luca Drescher'
+//     description = 'workflow raw pod5 -> analysis ready array of data for DRS experiments'
 //     mainScript = 'main.nf'
 //     nextflowVersion = '>=22.10.0' // 
-//     version = '1.0.0'
+//     version = '0.5.0'
 // }
 
 
@@ -25,7 +24,7 @@ process {
     
     // Container definitions
     withName: 'DORADO_BASECALL' {
-        container = 'ontresearch/dorado:shae423e761540b9d08b526a1eb32faf498f32e8f22'
+        container = 'ontresearch/dorado:shaf2aed69855de85e60b363c9be39558ef469ec365'
         containerOptions = '--gpus all'  // GPU access for Docker container
     }
     withName: 'MINIMAP2_ALIGN_GENOME' {
@@ -37,9 +36,7 @@ process {
     withName: 'MODKIT_PILEUP_GENOME' {
         container = 'ontresearch/modkit:shaa7bf2b62946eeb7646b9b9d60b892edfc3b3a52c'
     }
-    withName: 'MODKIT_PILEUP_TRANSCRIPTOME' {
-        container = 'ontresearch/modkit:shaa7bf2b62946eeb7646b9b9d60b892edfc3b3a52c'
-    }
+    
     withName: 'MODKIT_TRANSCRIPTOME_ACCELERATION' {
         container = 'luxendr13/modkit-accelerated:latest'
     }    
@@ -51,7 +48,7 @@ process {
     }
 
     withName: 'NANOCOMP' {
-        container = 'luxendr13/nanocomp:0.5.0'
+        container = 'luxendr13/nanocomp:0.6.0'
     }
 }
 
